Fixes gap at bottom of overlay on index page; Fixes alignment caused by display block in overlay menu; Fixes sticky header from "jumping" on scroll on index page; Adds no scroll class to body when overlay open

--- a/assets/scss/partials/_general.scss
+++ b/assets/scss/partials/_general.scss
@@ -1,116 +1,113 @@
 //General styles (ex: link styles, button styles, etc. )
-html, body {
 
-   ::selection {
-      background: $black;
-      color: $white;
-   }
+body, html {
+  ::selection {
+    background: $black;
+    color: $white;
+  }
 
-   img {
-      width: 100%;
-      height: auto;
-   }
+  img {
+    width: 100%;
+    height: auto;
+  }
+
+  .no-scroll {
+    overflow: hidden;
+  }
 }
 
 .container {
-   height: 100%;
+  height: 100%;
 
-   .bottom {
-      flex: 0 1 2rem;
-   }
+  .bottom {
+    flex: 0 1 2rem;
+  }
 }
 
 section {
-   padding: $global-padding;
+  padding: $global-padding;
 }
 
 h1, h2, h3, h4 {
-   font-weight: $global-weight-bold;
+  font-weight: $global-weight-bold;
 }
-
 //Link Styles
 a {
-   color: $black;
-   position: relative;
+  color: $black;
+  position: relative;
 
-   &:hover {
-      color: $blue;
+  &:hover {
+    color: $blue;
 
-      &.underline:after {
-         border: 2px solid $black;
-      }
-   }
+    &.underline:after {
+      border: 2px solid $black;
+    }
+  }
 
-   &.white {
-      color: $white;
+  &.white {
+    color: $white;
 
-      &:hover {
-         color: $black;
-      }
-   }
-
-   //Makes right arrow (">") after link
-   &.right-arrow:after {
-      content: ">";
-      position: relative;
-      top: 1px;
-      left: 6px;
-   }
-
-   //Makes black underline under links
-   &.underline:after {
-      content: "";
-      position: absolute;
-      border: 2px solid $blue;
-      left: 0;
-      right: auto;
-      width: 2rem;
-      bottom: -11px;
-      border-radius: 2px;
-   }
+    &:hover {
+      color: $black;
+    }
+  }
+  //Makes right arrow (">") after link
+  &.right-arrow:after {
+    content: ">";
+    position: relative;
+    top: 1px;
+    left: 6px;
+  }
+  //Makes black underline under links
+  &.underline:after {
+    content: "";
+    position: absolute;
+    border: 2px solid $blue;
+    left: 0;
+    right: auto;
+    width: 2rem;
+    bottom: -11px;
+    border-radius: 2px;
+  }
 }
-
-
 //Button Styles
 .button {
-   font-weight: 700;
-   font-size: .9rem;
+  font-weight: 700;
+  font-size: .9rem;
 }
 
 .hollow.button {
-   &.primary {
-      border: 2px solid $white;
+  &.primary {
+    border: 2px solid $white;
 
-      &:hover, &:focus {
-         border-color: $white;
-         color: $black;
-         background: $white;
-      }
-   }
+    &:focus, &:hover {
+      border-color: $white;
+      color: $black;
+      background: $white;
+    }
+  }
 
-   &.secondary {
-      border: 2px solid $black;
+  &.secondary {
+    border: 2px solid $black;
 
-      &:hover, &:focus {
-         border-color: $black;
-         color: $white;
-         background: $black;
-      }
-   }
+    &:focus, &:hover {
+      border-color: $black;
+      color: $white;
+      background: $black;
+    }
+  }
 }
 
-
-
 span.tags {
-   border: 1px solid rgba(214, 214, 214, .7);
-   border-radius: $button-radius;
-   font-size: .9rem;
-   color: lighten($black, 20);
-   padding: $global-padding / 3;
-   margin: 0 .4rem 0 0;
+  border: 1px solid rgba(214, 214, 214, .7);
+  border-radius: $button-radius;
+  font-size: .9rem;
+  color: lighten($black, 20);
+  padding: $global-padding / 3;
+  margin: 0 .4rem 0 0;
 
-   &:hover {
-       background: rgba(214, 214, 214, .2);
-       color: $black;
-   }
+  &:hover {
+    background: rgba(214, 214, 214, .2);
+    color: $black;
+  }
 }
